# hooligan-harness

./: .gitignore  Evaluator.md  Generator.md  INSTALL.md  LICENSE  Planner.md  README.md  SKILL.md  install.py  pyproject.toml  setup.bat  setup.sh  thoughts.md
.harness/: defaults.yaml  dev_init.md  harness-maintenance.yaml  progress.md
.harness/collaboration/: multi-generator.yaml
.harness/documentation/: living-docs.yaml
.harness/evolution/: patterns.yaml
.harness/integrations/: external-tools.yaml
.harness/knowledge/: confidence-scoring.yaml  failure-patterns.yaml
.harness/rollback/: rollback-strategy.yaml
.omc/: project-memory.json
.omc/sessions/: 1b7c23aa-e7ae-4e5b-a502-1f8937c8dc7d.json
.omc/state/: agent-replay-b082befc-a5c3-403a-b9bc-ea9071a1d3c5.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  subagent-tracking.json
personas/: Architect.md  Designer.md  Evaluator.md  SecurityEvaluator.md
tests/: test_install.py
