[project]
name = "hooligan-harness-installer"
version = "1.3.0"
description = "High-reliability engineering framework for AI code generation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
hooligan-install = "install:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 120
target-version = "py38"