[project]
name = "hooligan-harness-installer"
version = "1.3.1"
description = "High-reliability engineering framework for AI code generation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0",
    "questionary>=2.0.1",
]

[project.scripts]
hooligan-install = "install:install_main"
hooligan-update = "install:update_main"
hooligan-doctor = "install:doctor_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py38"
